# cmake_opencv_project

./: CMakeLists.txt  README.md
